better desribe vendor-specific SQL

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "license": "GPL-3.0-or-later",
   "type": "pimcore-bundle",
+  "homepage": "https://pimcore.blackbit.de",
   "authors": [
     {
       "name": "Blackbit",
